--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "code-runner.executorMap": {
-        "cpp": "cd $dir  &&  g++ main.cpp -o lucid  &&  ./lucid"
+        "cpp": "cd $dir  &&  g++ main.cpp source/*.cpp -std=c++20 -o lucid  &&  ./lucid"
     },
     "files.exclude": {
         "lucid": true,
