--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "*.dSYM": true
     },
     "files.associations": {
-        "vector": "cpp"
+        "vector": "cpp",
+        "string": "cpp"
     }
 }
